--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="work-experience">
         <div class="content-wrap item-details divider">
           <h2>Work Experience</h2>
-          <p>See my complete work history on <a href="https://www.linkedin.com/in/filmon-mengis-7025a8234/">LinkedIn</a>.</p>
+          <p>See my complete work history on <a href="https://www.linkedin.com/in/filmon-mengis-7025a8234/"target="_blank">LinkedIn</a>.</p>
 
           <!-- Job 1 -->
           <section class="job-item">
