--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             I have HTML5, CSS, JavaScript, Ajax, Rest Client and Bootstrap framework experience. I have knowledge and experiencing working with JavaScript and jQuery and ability to learn new technologies and languages. </p>
           
         </div>
+
+
+        <div class="topnav">
+          <a href="/Project 3/html5up-aerial/index.html"> Welcome Page</a>  
+          <a class="active" href="index.html"> Portfolio</a>
+        </div>
+
       </header>
 
       <!-- ************ PROJECTS / PORTFOLIO  ************** -->
