--- a/Project 3/index.html
+++ b/Project 3/index.html
@@ -23,8 +23,8 @@
 
 
         <div class="topnav">
-          <a href="/Project 3/html5up-aerial/index.html"> Welcome Page</a>  
-          <a class="active" href="index.html"> Portfolio</a>
+          <a href="/index.html"> Welcome Page</a>  
+          <a class="active" href="/Project 3/index.html"> Portfolio</a>
         </div>
 
       </header>
