--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Filmon Mengis</title>
+		<title>Filmon Mengis Welcome Page</title>
 		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,10 +37,11 @@
 					
 					</header>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<span class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</span>
 					</footer>
+				-->
 
 			</div>
 		</div>
